--- a/task-1/index.html
+++ b/task-1/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>task 1</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div id="navbar">
       <div class="left">
-        <img src="./index.jpg" alt="logo" />
+        <img src="images/index.jpg" alt="logo" />
         <h2>Betasquirrel</h2>
       </div>
       <div class="right">
         <nav>
-          <a href="#">hom</a>
+          <a href="#">home</a>
           <a href="#">about</a>
           <a href="#">contact us</a>
         </nav>
