--- a/task-4/index.html
+++ b/task-4/index.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>task-4</title>
-    <link rel="stylesheet" href="css/task-4.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div id="navbar">
       <div id="logo-container">
-        <img src="imeges/logo.jpg"alt="logo" />
+        <img src="images/figma.svg"alt="logo" />
+        <h2>figma</h2>
     </div>
     <div id="profile-container">
-      <img src="images/profile.jpeg" alt="profile" />
+      <img src="images/profile.jpg" alt="profile" />
     </div>
   </body>
 </html>
