--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>task 4</title>
+    <link rel="stylesheet" href="css/task-4.css" />
   </head>
   <body>
-    <a href="task-1/index.html">Task 1</a>
-    <a href="task-2/index.html">Task 2</a>
-    <a href="task-3/index.html">Task 3</a>
+    <div id="navbar">
+      <div id="logo-container">
+        <img src="images/figma.svg" alt="logo" />
+        <h2>figma</h2>
+      </div>
+      <div id="profile-cantainer">
+        <img src="images/profile.jpeg" alt="profile" />
+      </div>
+    </div>
   </body>
 </html>
