--- a/task-4/index.html
+++ b/task-4/index.html
@@ -11,11 +11,63 @@
   <body>
     <div id="navbar">
       <div id="logo-container">
-        <img src="images/figma.svg"alt="logo" />
+        <img src="images/figma.svg" alt="logo" />
         <h2>figma</h2>
-    </div>
-    <div id="profile-container">
-      <img src="images/profile.jpg" alt="profile" />
+      </div>
+      <div id="profile-container">
+        <img src="images/profile.jpg" alt="profile" />
+      </div>
+      <div class="main">
+        <div id="sidebar"></div>
+        <div id="container">
+          <h2>dashboard</h2>
+          <div id="tile-container">
+            <div class="tile green-pg">
+              <h2>total sales</h2>
+              <h3>200,0000</h3>
+            </div>
+            <div class="tile purple-pg">
+              <h2>total purchases</h2>
+              <h3>100,0000</h3>
+            </div>
+            <div classč"tile red-pg">
+            <h2>total expenses</h2>
+            <h3>50,0000</h3>
+          </div>
+          <div class="tile cyan-pg">
+            <h2>revenue</h2>
+            <h3>50,0000</h3>
+          </div>
+        </div>
+        <div id="circle-container">
+          <div class="circle purple-pg">
+            <div class="inner-one green-pg">
+              <h2>50/400</h2>
+            </div>
+          </div>
+          <div class="circle cyan-pg">
+            <div class="inner-two">
+              <h2>100/200</h2>
+            </div>
+          </div>
+          <div class="circle red-pg">
+            <div class="inner-three">
+              <div class="inner-four purple-pg">
+                <h2>danger</h2>
+              </div>
+            </div>
+          </div>
+          <div class="chart">
+            <div>class="bar green-pg"</div>
+            <div>class="bar purple-pg"</div>
+            <div>class="bar red-pg"</div>
+            <div>class="bar cyan-pg"</div>
+            <div>class="bar green-pg"</div>
+            <div>class="bar purple-pg"</div>
+            <div>class="line"</div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
