--- a/task-4/index.html
+++ b/task-4/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    ¥
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>task-4</title>
@@ -17,54 +16,69 @@
       <div id="profile-container">
         <img src="images/profile.jpg" alt="profile" />
       </div>
-      <div class="main">
-        <div id="sidebar"></div>
-        <div id="container">
-          <h2>dashboard</h2>
-          <div id="tile-container">
-            <div class="tile green-pg">
-              <h2>total sales</h2>
-              <h3>200,0000</h3>
-            </div>
-            <div class="tile purple-pg">
-              <h2>total purchases</h2>
-              <h3>100,0000</h3>
-            </div>
-            <div classč"tile red-pg">
+    </div>
+    <div class="main">
+      <div id="sidebar">
+        <nav>
+          <a href="#" class="active">dashboard</a>
+          <a href="#">user</a>
+          <a href="#">customers</a>
+          <a href="#">purchases</a>
+          <a href="#">sales</a>
+          <a href="#">tax</a>
+          <a href="#">employees</a>
+          <a href="#">accounts</a>
+          <a href="#">configuration</a>
+          <a href="#">auditing</a>
+          <a href="#">reports</a>
+        </nav>
+      </div>
+      <div id="container">
+        <h2>dashboard</h2>
+        <div id="tile-container">
+          <div class="tile green-bg">
+            <h2>total sales</h2>
+            <h3>200,0000</h3>
+          </div>
+          <div class="tile purple-bg">
+            <h2>total purchases</h2>
+            <h3>100,0000</h3>
+          </div>
+          <div class="tile red-bg">
             <h2>total expenses</h2>
             <h3>50,0000</h3>
           </div>
-          <div class="tile cyan-pg">
+          <div class="tile cyan-bg">
             <h2>revenue</h2>
             <h3>50,0000</h3>
           </div>
         </div>
         <div id="circle-container">
-          <div class="circle purple-pg">
-            <div class="inner-one green-pg">
+          <div class="circle purple-bg">
+            <div class="inner-one green-bg">
               <h2>50/400</h2>
             </div>
           </div>
-          <div class="circle cyan-pg">
+          <div class="circle cyan-bg">
             <div class="inner-two">
-              <h2>100/200</h2>
+              <h2>10/200</h2>
             </div>
           </div>
-          <div class="circle red-pg">
+          <div class="circle red-bg">
             <div class="inner-three">
-              <div class="inner-four purple-pg">
+              <div class="inner-four purple-bg">
                 <h2>danger</h2>
               </div>
             </div>
           </div>
           <div class="chart">
-            <div>class="bar green-pg"</div>
-            <div>class="bar purple-pg"</div>
-            <div>class="bar red-pg"</div>
-            <div>class="bar cyan-pg"</div>
-            <div>class="bar green-pg"</div>
-            <div>class="bar purple-pg"</div>
-            <div>class="line"</div>
+            <div class="bar green-bg one"></div>
+            <div class="bar purple-bg two"></div>
+            <div class="bar red-bg three"></div>
+            <div class="bar cyan-bg four"></div>
+            <div class="bar green-bg five"></div>
+            <div class="bar purple-bg six"></div>
+            <div class="line"></div>
           </div>
         </div>
       </div>
