--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>task 4</title>
-    <link rel="stylesheet" href="css/task-4.css" />
+    <title>Betasqurrel task</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div id="navbar">
-      <div id="logo-container">
-        <img src="images/figma.svg" alt="logo" />
-        <h2>figma</h2>
-      </div>
-      <div id="profile-cantainer">
-        <img src="images/profile.jpeg" alt="profile" />
-      </div>
+    <div class="box">
+      <a href="task-1/index.html">TASK-1</a>
+      <a href="task-2/index.html">TASK-2</a>
+      <a href="task-4/index.html">TASK-4</a>
     </div>
   </body>
 </html>
