--- a/task-1/index.html
+++ b/task-1/index.html
@@ -36,7 +36,7 @@
         Eu duis id ut aute sunt esse sint mollit est.
       </p>
     </div>
-    <div class="boxes m-r m-l">
+    <div class="boxes m-r first">
       <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt
@@ -44,7 +44,7 @@
         recusandae molestiae
       </p>
     </div>
-    <div class="boxes m-r">
+    <div class="boxes m-r second">
       <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt
@@ -52,7 +52,7 @@
         voluptatibus asperiores
       </p>
     </div>
-    <div class="boxes third">
+    <div class="boxes m-r third">
       <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aliquid
